added animations on main page

--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Fizjon, Fizjoterapia, Fizjoterapeuta, Masaż, Masaż leczniczy, Kinesiotaping, Terapia Manualna, Kinezyterapia, Fizykoterapia, Leczenie Ruchem"/>
     <title>Fizjon</title>
     <script src="https://kit.fontawesome.com/3090efb54c.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Palanquin:300,400,700&display=swap&subset=latin-ext"
@@ -24,10 +25,10 @@
         <nav class="page-menu">
             <ul class="page-menu-list">
                 <li>
-                    <a href="">Strona główna</a>
+                    <a href="#">Strona główna</a>
                 </li>
                 <li>
-                    <a href="">O mnie</a>
+                    <a href="about-me.html">O mnie</a>
                 </li>
                 <li>
                     <a href="">Galeria</a>
@@ -60,8 +61,8 @@
     <!-- Main banner -->
     <section class="banner">
         <div class="container banner-content">
-            <h1>Fizjoterapia</h1>
-            <h1>Rehabilitacja</h1>
+            <h1 class="text1">Fizjoterapia</h1>
+            <h1 class="text2">Rehabilitacja</h1>
         </div>
         <button class="btn-scroll-down" id="btn-scroll-down"><i class="fas fa-angle-double-down"></i></button>
     </section>
@@ -72,40 +73,40 @@
                 <h2>Oferowane Usługi</h2>
             </div>
             <div class="row">
-                <div class="col">
-                    <div class="offer-icon"><img src="images/terapia_manualna.png" alt=""></div>
+                <div class="col offer-div">
+                    <div class="offer-icon"><img src="images/terapia_manualna.png" alt="" class="offer-img"></div>
                     <div class="offer-content">
                         <h3>terapia manualna</h3>
                         <p>Terapia manualna wykorzystuje naturalne możliwości naszego ciała. Leczy nerwobóle, bóle
                             stawów i kręgosłupa.</p>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="offer-icon"><img src="images/kinezyterapia.png" alt=""></div>
+                <div class="col offer-div">
+                    <div class="offer-icon"><img src="images/kinezyterapia.png" alt="" class="offer-img"></div>
                     <div class="offer-content">
                         <h3>kinezyterapia</h3>
                         <p>Leczenie ruchem. Jej zadaniem jest doprowadzenie do maksymalnej sprawności pacjenta.</p>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="offer-icon"><img src="images/kinesiotaping.png" alt=""></div>
+                <div class="col offer-div">
+                    <div class="offer-icon"><img src="images/kinesiotaping.png" alt="" class="offer-img"></div>
                     <div class="offer-content">
                         <h3>kinesiotaping</h3>
                         <p>Plastrowanie dynamiczne - polega na oklejaniu wybranych części ciała specjalnymi elastycznymi
                             plastrami. </p>
                     </div>
                 </div>
-           
-                <div class="col">
-                    <div class="offer-icon"><img src="images/fizykoterapia.png" alt=""></div>
+
+                <div class="col offer-div">
+                    <div class="offer-icon"><img src="images/fizykoterapia.png" alt="" class="offer-img"></div>
                     <div class="offer-content">
                         <h3>fizykoterapia</h3>
                         <p>Wykorzystuje zjawiska fizyczne takie jak światło, prąd, ultradźwięki, pole magnetyczne.
                             Przyspiesza procesy regeneracji. </p>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="offer-icon"><img src="images/masaz_leczniczy.png" alt=""></div>
+                <div class="col offer-div">
+                    <div class="offer-icon"><img src="images/masaz_leczniczy.png" alt="" class="offer-img"></div>
                     <div class="offer-content">
                         <h3>masaż leczniczy</h3>
                         <p>Przynosi ulgę bolącym partiom cała oraz relaksuje. Zalecany w bólach kręgosłupa.</p>
@@ -135,26 +136,28 @@
                 <div class="col">
                     <div class="article-img"><img src="images/article1.png" alt=""></div>
                     <div class="article-content">
-                        <h3><a href="https://www.linkedin.com/pulse/protok%C3%B3%C5%82-post%C4%99powania-po-urazie-stawu-skokowego-paula-karolak/" target="_blank">Uraz stawu skokowego</a></h3>
+                        <h3><a href="https://www.linkedin.com/pulse/protok%C3%B3%C5%82-post%C4%99powania-po-urazie-stawu-skokowego-paula-karolak/"
+                                target="_blank">Uraz stawu skokowego</a></h3>
                         <hr class="horizontal-line">
                         <p>Protokół postępowania po urazie stawu skokowego. </p>
                     </div>
                     <div class="read-more">
-                        <a
-                            href="https://www.linkedin.com/pulse/protok%C3%B3%C5%82-post%C4%99powania-po-urazie-stawu-skokowego-paula-karolak/" target="_blank">Czytaj
+                        <a href="https://www.linkedin.com/pulse/protok%C3%B3%C5%82-post%C4%99powania-po-urazie-stawu-skokowego-paula-karolak/"
+                            target="_blank">Czytaj
                             artykuł</a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="article-img"><img src="images/article2.png" alt=""></div>
                     <div class="article-content">
-                        <h3><a href="https://www.linkedin.com/pulse/punkty-spustowe-i-r%C3%B3%C5%BCne-sposoby-ich-uwalniania-paula-karolak/" target="_blank">Punkty spustowe</a></h3>
+                        <h3><a href="https://www.linkedin.com/pulse/punkty-spustowe-i-r%C3%B3%C5%BCne-sposoby-ich-uwalniania-paula-karolak/"
+                                target="_blank">Punkty spustowe</a></h3>
                         <hr class="horizontal-line">
                         <p>Jak powstają? Poznaj wskazania dla terapii i różne sposoby ich uwalniania.</p>
                     </div>
                     <div class="read-more">
-                        <a
-                            href="https://www.linkedin.com/pulse/punkty-spustowe-i-r%C3%B3%C5%BCne-sposoby-ich-uwalniania-paula-karolak/" target="_blank">Czytaj
+                        <a href="https://www.linkedin.com/pulse/punkty-spustowe-i-r%C3%B3%C5%BCne-sposoby-ich-uwalniania-paula-karolak/"
+                            target="_blank">Czytaj
                             artykuł</a>
                     </div>
                 </div>
@@ -186,5 +189,6 @@
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
     <script src="./js/index.js"></script>
 </body>
+
 
 </html>
