addes subpages - about me, articles, contact form

--- a/articles.html
+++ b/articles.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Fizjon, Fizjoterapia, Fizjoterapeuta, Masaż, Masaż leczniczy, Kinesiotaping, Terapia Manualna, Kinezyterapia, Fizykoterapia, Leczenie Ruchem"/>
+    <meta name="keywords"
+        content="Fizjon, Fizjoterapia, Fizjoterapeuta, Masaż, Masaż leczniczy, Kinesiotaping, Terapia Manualna, Kinezyterapia, Fizykoterapia, Leczenie Ruchem" />
     <title>Fizjon</title>
     <script src="https://kit.fontawesome.com/3090efb54c.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Palanquin:300,400,700&display=swap&subset=latin-ext"
@@ -14,6 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main-page.css">
+    <link rel="stylesheet" href="css/about-me.css">
+    <link rel="stylesheet" href="css/articles.css">
 </head>
 
 <body>
@@ -59,78 +62,18 @@
         </nav>
     </header>
     <!-- Main banner -->
-    <section class="banner">
-        <div class="container banner-content">
-            <h1 class="text1">Fizjoterapia</h1>
-            <h1 class="text2">Rehabilitacja</h1>
-        </div>
-        <button class="btn-scroll-down" id="btn-scroll-down"><i class="fas fa-angle-double-down"></i></button>
-    </section>
-    <!-- Offer -->
-    <section class="my-offer" id="my-offer">
-        <div class="container">
-            <div class="section-header">
-                <h2>Oferowane Usługi</h2>
-            </div>
-            <div class="row">
-                <div class="col offer-div">
-                    <div class="offer-icon"><img src="images/terapia_manualna.png" alt="" class="offer-img"></div>
-                    <div class="offer-content">
-                        <h3>terapia manualna</h3>
-                        <p>Terapia manualna wykorzystuje naturalne możliwości naszego ciała. Leczy nerwobóle, bóle
-                            stawów i kręgosłupa.</p>
-                    </div>
-                </div>
-                <div class="col offer-div">
-                    <div class="offer-icon"><img src="images/kinezyterapia.png" alt="" class="offer-img"></div>
-                    <div class="offer-content">
-                        <h3>kinezyterapia</h3>
-                        <p>Leczenie ruchem. Jej zadaniem jest doprowadzenie do maksymalnej sprawności pacjenta.</p>
-                    </div>
-                </div>
-                <div class="col offer-div">
-                    <div class="offer-icon"><img src="images/kinesiotaping.png" alt="" class="offer-img"></div>
-                    <div class="offer-content">
-                        <h3>kinesiotaping</h3>
-                        <p>Plastrowanie dynamiczne - polega na oklejaniu wybranych części ciała specjalnymi elastycznymi
-                            plastrami. </p>
-                    </div>
-                </div>
-
-                <div class="col offer-div">
-                    <div class="offer-icon"><img src="images/fizykoterapia.png" alt="" class="offer-img"></div>
-                    <div class="offer-content">
-                        <h3>fizykoterapia</h3>
-                        <p>Wykorzystuje zjawiska fizyczne takie jak światło, prąd, ultradźwięki, pole magnetyczne.
-                            Przyspiesza procesy regeneracji. </p>
-                    </div>
-                </div>
-                <div class="col offer-div">
-                    <div class="offer-icon"><img src="images/masaz_leczniczy.png" alt="" class="offer-img"></div>
-                    <div class="offer-content">
-                        <h3>masaż leczniczy</h3>
-                        <p>Przynosi ulgę bolącym partiom cała oraz relaksuje. Zalecany w bólach kręgosłupa.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- About me -->
-    <section class="about-me">
-        <div class="container">
-            <div class="my-image"><img src="images/Paula.jfif" alt="Moje zdjęcie"></div>
-            <div class="my-message">
-                <h3>Moim celem jako fizjoterapeuty jest osiągnięcie maksymalnej satysfakcji i efektywności,
-                    stosując celowane i profesjonalne leczenie dla każdego pacjenta.</h3>
-                <h4>Paula Karolak <span>Fizjoterapeuta</span></h4>
-            </div>
+    <section class="subbaner">
+        <div class="container subbaner-content">
+            <h1>Artykuły</h1>
+            <h3><a href="main.html"><span>FIZJON</span></a> <span><i class="fas fa-long-arrow-alt-right"></i></span><a href="#">
+                    Artykuły</a> </h3>
         </div>
     </section>
     <!-- Articles -->
     <section class="articles">
         <div class="container">
             <div class="section-header">
-                <h2>Najnowsze Artykuły</h2>
+                <h2>Moje publikacje</h2>
             </div>
             <div class="row">
                 <div class="col">
@@ -190,7 +133,6 @@
     </section>
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
     <script src="./js/main.js"></script>
-    <script src="./js/home.js"></script>
 </body>
 
 
