added alts to img

--- a/gallery.html
+++ b/gallery.html
@@ -78,12 +78,12 @@
                 <h2>Galeria</h2>
             </div>
             <div class="gallery-container">
-                <a data-fancybox="gallery" href="./images/gallery/gabinet.jpg" data-caption="Gabinet"><img src="./images/gallery small/gabinet-small.jpg"></a>
-                <a data-fancybox="gallery" href="./images/gallery/gabinet 2.jpg" data-caption="Gabinet"><img src="./images/gallery small/gabinet 2-small.jpg"></a>
-                <a data-fancybox="gallery" href="./images/gallery/fizykoterapia.jpg" data-caption="Fizykoterapia"><img src="./images/gallery small/fizykoterapia-small.jpg"></a>
-                <a data-fancybox="gallery" href="./images/gallery/presoterapia.jpg" data-caption="Presoterapia"><img src="./images/gallery small/presoterapia-small.jpg"></a>
-                <a data-fancybox="gallery" href="./images/gallery/sala ćwiczeń.jpg" data-caption="Sala ćwiczeń"><img src="./images/gallery small/sala ćwiczeń-small.jpg"></a>
-                <a data-fancybox="gallery" href="./images/gallery/sala przyjęć.jpg" data-caption="Sala przyjęć"><img src="./images/gallery small/sala przyjęć-small.jpg"></a>
+                <a data-fancybox="gallery" href="./images/gallery/gabinet.jpg" data-caption="Gabinet"><img src="./images/gallery-small/gabinet-small.jpg" alt="Gabinet"></a>
+                <a data-fancybox="gallery" href="./images/gallery/gabinet-2.jpg" data-caption="Gabinet"><img src="./images/gallery-small/gabinet-2-small.jpg" alt="Gabinet-2"></a>
+                <a data-fancybox="gallery" href="./images/gallery/fizykoterapia.jpg" data-caption="Fizykoterapia"><img src="./images/gallery-small/fizykoterapia-small.jpg" alt="Fizykoterapia"></a>
+                <a data-fancybox="gallery" href="./images/gallery/presoterapia.jpg" data-caption="Presoterapia"><img src="./images/gallery-small/presoterapia-small.jpg" alt="Presoterapia"></a>
+                <a data-fancybox="gallery" href="./images/gallery/sala-cwiczen.jpg" data-caption="Sala ćwiczeń"><img src="./images/gallery-small/sala-cwiczen-small.jpg" alt="Sala-cwiczen"></a>
+                <a data-fancybox="gallery" href="./images/gallery/sala-przyjęc.jpg" data-caption="Sala przyjęć"><img src="./images/gallery-small/sala-przyjec-small.jpg" alt="sala-przyjec"></a>
             </div>
 
         </div>
