fixed img names

--- a/gallery.html
+++ b/gallery.html
@@ -83,7 +83,7 @@
                 <a data-fancybox="gallery" href="./images/gallery/fizykoterapia.jpg" data-caption="Fizykoterapia"><img src="./images/gallery-small/fizykoterapia-small.jpg" alt="Fizykoterapia"></a>
                 <a data-fancybox="gallery" href="./images/gallery/presoterapia.jpg" data-caption="Presoterapia"><img src="./images/gallery-small/presoterapia-small.jpg" alt="Presoterapia"></a>
                 <a data-fancybox="gallery" href="./images/gallery/sala-cwiczen.jpg" data-caption="Sala ćwiczeń"><img src="./images/gallery-small/sala-cwiczen-small.jpg" alt="Sala-cwiczen"></a>
-                <a data-fancybox="gallery" href="./images/gallery/sala-przyjęc.jpg" data-caption="Sala przyjęć"><img src="./images/gallery-small/sala-przyjec-small.jpg" alt="sala-przyjec"></a>
+                <a data-fancybox="gallery" href="./images/gallery/sala-przyjec.jpg" data-caption="Sala przyjęć"><img src="./images/gallery-small/sala-przyjec-small.jpg" alt="sala-przyjec"></a>
             </div>
 
         </div>
