fixed linking to homepage with logo

--- a/main.html
+++ b/main.html
@@ -189,8 +189,7 @@
         <h5>Copyright by <a href="https://karolak.pl">karolak.pl</a></h5>
     </section>
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
-    <script src="./js/main.js"></script>
-    <script src="./js/home.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 
