--- a/about-me.html
+++ b/about-me.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Header with menu -->
     <header class="page-header" id="page-header">
-        <a href="#" class="page-logo">
+        <a href="main.html" class="page-logo">
             <img src="images/logo_small.png" alt="Page Logo">
         </a>
         <nav class="page-menu">
@@ -158,7 +158,7 @@
         <h5>Copyright by <a href="https://karolak.pl">karolak.pl</a></h5>
     </section>
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
-    <script src="./js/main.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 
