--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
 <body>
     <!-- Header with menu -->
     <header class="page-header" id="page-header">
-        <a href="#" class="page-logo">
+        <a href="main.html" class="page-logo">
             <img src="images/logo_small.png" alt="Page Logo">
         </a>
         <nav class="page-menu">
@@ -115,8 +115,7 @@
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/gallery.js"></script>
+    <script src="./js/app.js"></script>
     
    
 </body>
