--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
         content="Fizjon, Fizjoterapia, Fizjoterapeuta, Masaż, Masaż leczniczy, Kinesiotaping, Terapia Manualna, Kinezyterapia, Fizykoterapia, Leczenie Ruchem" />
     <title>Fizjon</title>
     <script src="https://kit.fontawesome.com/3090efb54c.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Palanquin:300,400,700&display=swap&subset=latin-ext"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap&subset=latin-ext"
@@ -107,25 +108,41 @@
                         </div>
                     </div>
                     <!-- Form -->
-                    <form id="contact-form">
+                    <form id="contact-form" method="pots" action="" novalidate>
                         <div class="col contact-div">
                             <div class="form-row">
-                                <input type="text" id="name" name="name" value="" placeholder="Imię i nazwisko">
+                                <label for="name"></label>
+                                <input type="text" id="name" name="name" value="" placeholder="Imię i nazwisko" required
+                                    minlength="5">
+                                <span class="comunicate hide">Nazwa musi mieć więcej niż 4 znaki</span>
                             </div>
                             <div class="form-row">
-                                <input type="text" id="phone" name=phone value="" placeholder="Numer telefonu">
+                                <label for="phone"></label>
+                                <input type="tel" id="phone" name="phone" value="" placeholder="Numer telefonu" required
+                                    pattern="(?<!\w)(\(?(\+|00)?\d{2}\)?)?[ -]?\d{3}[ -]?\d{3}[ -]?\d{3}(?!\w)">
+                                <span class="comunicate hide">Nieprawidłowy numer telefonu</span>
                             </div>
                             <div class="form-row">
-                                <input type="text" id="mail" name=mail value="" placeholder="Adres e-mail">
+                                <label for="mail"></label>
+                                <input type="email" id="email" name="email" value="" placeholder="Adres e-mail"
+                                    required>
+                                <span class="comunicate hide">Podano adres e-mail w złym formacie</span>
                             </div>
                         </div>
                         <!-- Form Message -->
                         <div class="col contact-div">
                             <div class="form-message">
-                                <textarea form="contact-form" id="message" name="message" cols="100"
-                                    rows="6">Tu wpisz treść wiadomości</textarea>
-                                    <button type="submit" form="contact-form" id="btn-submit" class="btn-submit" value="Submit">Wyślij
-                                        wiadomość</button>
+                                <label for="message"></label>
+                                <textarea form="contact-form" id="message" name="message" cols="100" rows="6" required
+                                    minlength="10" placeholder="Tu wpisz treść wiadomości"></textarea>
+                                <span class="comunicate hide">Wiadomość musi mieć więcej niż 9 znaków</span>
+                                <button type="submit" form="contact-form" id="btn-submit" class="btn-submit"
+                                    value="Submit">Wyślij
+                                    wiadomość</button>
+                                <div class="loading hide">
+                                    <div class="loading-animation"></div>
+                                </div>
+                                <div class="success hide">Wiadomość wysłana pomyślnie<i class="fas fa-check"></i></div>
                             </div>
                         </div>
                     </form>
@@ -159,6 +176,8 @@
         <h5>Copyright by <a href="https://karolak.pl">karolak.pl</a></h5>
     </section>
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <script src="./js/jquery.js"></script>
     <script src="./js/app.js"></script>
 </body>
 
