--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                     <!-- Form -->
-                    <form id="contact-form" method="pots" action="" novalidate>
+                    <form id="contact-form" method="post" action="" novalidate>
                         <div class="col contact-div">
                             <div class="form-row">
                                 <label for="name"></label>
@@ -123,7 +123,7 @@
                                 <span class="comunicate hide">Nieprawidłowy numer telefonu</span>
                             </div>
                             <div class="form-row">
-                                <label for="mail"></label>
+                                <label for="email"></label>
                                 <input type="email" id="email" name="email" value="" placeholder="Adres e-mail"
                                     required>
                                 <span class="comunicate hide">Podano adres e-mail w złym formacie</span>
@@ -146,7 +146,6 @@
                             </div>
                         </div>
                     </form>
-
                 </div>
             </div>
         </div>
