fixed css for firefox, set cookies

--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
                         <div class="col contact-div">
                             <div class="form-message">
                                 <label for="message"></label>
-                                <textarea form="contact-form" id="message" name="message" cols="100" rows="6" required
+                                <textarea form="contact-form" id="message" name="message" cols="100" rows="5" required
                                     minlength="10" placeholder="Tu wpisz treść wiadomości"></textarea>
                                 <span class="comunicate hide">Wiadomość musi mieć więcej niż 9 znaków</span>
                                 <button type="submit" form="contact-form" id="btn-submit" class="btn-submit"
@@ -172,7 +172,7 @@
         </div>
     </footer>
     <section class="copyright">
-        <h5>Copyright by <a href="https://karolak.pl">karolak.pl</a></h5>
+        <h5>Copyright <a href="https://fizjon.com">Fizjon (2020)</a></h5>
     </section>
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
