--- a/gallery.html
+++ b/gallery.html
@@ -110,7 +110,7 @@
         </div>
     </footer>
     <section class="copyright">
-        <h5>Copyright by <a href="https://karolak.pl">karolak.pl</a></h5>
+        <h5>Copyright <a href="https://fizjon.com">Fizjon (2020)</a></h5>
     </section>
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
