fixed regexp for firefox and added event preventing saving form values in firefox on reload

--- a/articles.html
+++ b/articles.html
@@ -65,7 +65,8 @@
     <section class="subbaner">
         <div class="container subbaner-content">
             <h1>Artykuły</h1>
-            <h3><a href="main.html"><span>FIZJON</span></a> <span><i class="fas fa-long-arrow-alt-right"></i></span><a href="#">
+            <h3><a href="main.html"><span>FIZJON</span></a> <span><i class="fas fa-long-arrow-alt-right"></i></span><a
+                    href="#">
                     Artykuły</a> </h3>
         </div>
     </section>
@@ -134,6 +135,5 @@
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
     <script src="./js/app.js"></script>
 </body>
-
 
 </html>
