--- a/gallery.html
+++ b/gallery.html
@@ -78,12 +78,24 @@
                 <h2>Galeria</h2>
             </div>
             <div class="gallery-container">
-                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/gabinet.jpg" data-caption="Gabinet"><img src="./images/gallery-small/gabinet-small.jpg" alt="Gabinet"></a></div>
-                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/gabinet-2.jpg" data-caption="Gabinet"><img src="./images/gallery-small/gabinet-2-small.jpg" alt="Gabinet-2"></a></div>
-                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/fizykoterapia.jpg" data-caption="Fizykoterapia"><img src="./images/gallery-small/fizykoterapia-small.jpg" alt="Fizykoterapia"></a></div>
-                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/presoterapia.jpg" data-caption="Presoterapia"><img src="./images/gallery-small/presoterapia-small.jpg" alt="Presoterapia"></a></div>
-                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/sala-cwiczen.jpg" data-caption="Sala ćwiczeń"><img src="./images/gallery-small/sala-cwiczen-small.jpg" alt="Sala-cwiczen"></a></div>
-                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/sala-przyjec.jpg" data-caption="Sala przyjęć"><img src="./images/gallery-small/sala-przyjec-small.jpg" alt="sala-przyjec"></a></div>
+                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/gabinet.jpg"
+                        data-caption="Gabinet"><img src="./images/gallery-small/gabinet-small.jpg" alt="Gabinet"></a>
+                </div>
+                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/gabinet-2.jpg"
+                        data-caption="Gabinet"><img src="./images/gallery-small/gabinet-2-small.jpg"
+                            alt="Gabinet-2"></a></div>
+                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/fizykoterapia.jpg"
+                        data-caption="Fizykoterapia"><img src="./images/gallery-small/fizykoterapia-small.jpg"
+                            alt="Fizykoterapia"></a></div>
+                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/presoterapia.jpg"
+                        data-caption="Presoterapia"><img src="./images/gallery-small/presoterapia-small.jpg"
+                            alt="Presoterapia"></a></div>
+                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/sala-cwiczen.jpg"
+                        data-caption="Sala ćwiczeń"><img src="./images/gallery-small/sala-cwiczen-small.jpg"
+                            alt="Sala-cwiczen"></a></div>
+                <div class="img-container"><a data-fancybox="gallery" href="./images/gallery/sala-przyjec.jpg"
+                        data-caption="Sala przyjęć"><img src="./images/gallery-small/sala-przyjec-small.jpg"
+                            alt="sala-przyjec"></a></div>
             </div>
 
         </div>
@@ -116,8 +128,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script src="./js/jquery.js"></script>
-    <script src="./js/app.js"></script> 
+    <script src="./js/app.js"></script>
 </body>
-
 
 </html>
