--- a/gallery.html
+++ b/gallery.html
@@ -125,6 +125,15 @@
         <h5>Copyright <a href="https://fizjon.com">Fizjon (2020)</a></h5>
     </section>
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
+    <section class="cookie" id="cookie-alert">
+        <div class="container">
+            <div class="cookie-div">
+                <h5>Strona korzysta z plików cookies w celu realizacji usług i zgodnie z <a href="">Polityką Plików Cookies.</a></h5>
+                <h5>Możesz określić warunki przechowywania lub dostępu do plików cookies w Twojej przeglądarce.</h5>
+            </div>
+            <button class="btn-cookie" id="btn-cookie">OK, rozumiem</button>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
     <script src="./js/jquery.js"></script>
     <script src="./js/app.js"></script>
