added privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,16 +8,17 @@
         content="Fizjon, Fizjoterapia, Fizjoterapeuta, Masaż, Masaż leczniczy, Kinesiotaping, Terapia Manualna, Kinezyterapia, Fizykoterapia, Leczenie Ruchem" />
     <title>Fizjon</title>
     <script src="https://kit.fontawesome.com/3090efb54c.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Palanquin:300,400,700&display=swap&subset=latin-ext"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap&subset=latin-ext"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main-page.css">
     <link rel="stylesheet" href="css/about-me.css">
-    <link rel="stylesheet" href="css/articles.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/privacy-policy.css">
 </head>
 
 <body>
@@ -65,47 +66,28 @@
     <!-- Main banner -->
     <section class="subbaner">
         <div class="container subbaner-content">
-            <h1>Artykuły</h1>
+            <h1>Polityka prywatności</h1>
             <h3><a href="main.html"><span>FIZJON</span></a> <span><i class="fas fa-long-arrow-alt-right"></i></span><a
-                    href="#">
-                    Artykuły</a> </h3>
+                    href="#"> Polityka prywatności</a> </h3>
         </div>
     </section>
-    <!-- Articles -->
-    <section class="articles">
+    <!-- Contact -->
+    <section class="privacy-subpage">
+        <h2>Polityka prywatności i plików cookies</h2>
         <div class="container">
-            <div class="section-header">
-                <h2>Moje publikacje</h2>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="article-img"><img src="images/article1.png" alt=""></div>
-                    <div class="article-content">
-                        <h3><a href="https://www.linkedin.com/pulse/protok%C3%B3%C5%82-post%C4%99powania-po-urazie-stawu-skokowego-paula-karolak/"
-                                target="_blank">Uraz stawu skokowego</a></h3>
-                        <hr class="horizontal-line">
-                        <p>Protokół postępowania po urazie stawu skokowego. </p>
-                    </div>
-                    <div class="read-more">
-                        <a href="https://www.linkedin.com/pulse/protok%C3%B3%C5%82-post%C4%99powania-po-urazie-stawu-skokowego-paula-karolak/"
-                            target="_blank">Czytaj
-                            artykuł</a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="article-img"><img src="images/article2.png" alt=""></div>
-                    <div class="article-content">
-                        <h3><a href="https://www.linkedin.com/pulse/punkty-spustowe-i-r%C3%B3%C5%BCne-sposoby-ich-uwalniania-paula-karolak/"
-                                target="_blank">Punkty spustowe</a></h3>
-                        <hr class="horizontal-line">
-                        <p>Jak powstają? Poznaj wskazania dla terapii i różne sposoby ich uwalniania.</p>
-                    </div>
-                    <div class="read-more">
-                        <a href="https://www.linkedin.com/pulse/punkty-spustowe-i-r%C3%B3%C5%BCne-sposoby-ich-uwalniania-paula-karolak/"
-                            target="_blank">Czytaj
-                            artykuł</a>
-                    </div>
-                </div>
+            <div class="policy">
+                <h3>§ Tart powder apple pie.</h3>
+                <p>Cupcake ipsum dolor sit amet carrot cake. Pie I love chocolate bar ice cream liquorice cake. Donut croissant icing chocolate toffee. Biscuit marshmallow tart ice cream I love bear claw. I love biscuit I love jelly-o jujubes. Cupcake liquorice I love I love tart jujubes. Caramels pie chocolate cake sugar plum. Gummies pie sugar plum wafer carrot cake cheesecake. Gingerbread liquorice cake chupa chups sweet roll jelly-o croissant I love chocolate. Gummi bears dragée jelly I love caramels topping candy canes toffee icing.</p>
+                <h3>§ Cupcake ipsum dolor</h3>
+                <p>Icing pastry sweet roll I love I love pudding chocolate candy. Halvah tart carrot cake bonbon oat cake sugar plum muffin. Sweet candy canes I love gummies cookie cheesecake dragée gingerbread. Chocolate bar I love caramels croissant tiramisu. Macaroon apple pie tootsie roll I love liquorice tootsie roll soufflé. Marzipan donut tootsie roll bear claw carrot cake. Carrot cake muffin ice cream. Topping caramels chocolate bar candy I love lollipop soufflé cheesecake ice cream. Apple pie cake marshmallow chocolate. Lemon drops cupcake chocolate cake chupa chups tiramisu jelly beans danish I love soufflé.</p>
+                <h3>§ Chupa chups bonbon jelly</h3>
+                <p>Croissant macaroon apple pie sugar plum cookie candy canes. Chocolate bar cookie pastry jujubes gummi bears I love jelly-o sweet roll. Cake sugar plum liquorice sweet roll liquorice tiramisu cheesecake bear claw jelly beans. Bear claw pie marshmallow candy canes oat cake jelly beans tiramisu. Carrot cake candy bear claw. Topping gummies biscuit gummi bears chupa chups fruitcake wafer. Brownie I love I love cake jujubes cupcake halvah chocolate cake cupcake. Fruitcake cake sesame snaps oat cake liquorice brownie I love powder. Macaroon gummi bears biscuit. I love candy cake.</p>
+                <h3>§ Chocolate bar cookie pastry</h3>
+                <p>Tiramisu brownie I love tootsie roll oat cake I love topping. Chocolate cupcake gummi bears chocolate cake ice cream. Chocolate cake chocolate bar macaroon gummies I love sesame snaps. Apple pie topping I love tootsie roll cookie sweet tart. Apple pie I love jujubes. Jelly cake cupcake macaroon dragée carrot cake donut muffin I love. I love candy I love marshmallow topping oat cake. Pudding fruitcake danish cotton candy biscuit candy canes jujubes cotton candy.</p>
+                <h3>§ Macaroon gummi bears biscuit</h3>
+                <p>Lemon drops marzipan I love gingerbread wafer tootsie roll cupcake donut. Candy canes marzipan ice cream I love liquorice gummies. Toffee topping gingerbread croissant chupa chups sweet roll sesame snaps jujubes. Cotton candy halvah jelly beans. Donut topping wafer sugar plum danish cotton candy pie. I love icing I love topping lemon drops sweet roll.</p>
+                <h3>§ Lemon drops marzipan </h3>
+                <p>Dessert pastry apple pie. Jelly macaroon I love sweet roll gummi bears jujubes carrot cake dragée. I love gummies bear claw tiramisu halvah ice cream. Cheesecake danish donut I love caramels I love gummies. Powder jelly chocolate bar chocolate bar jelly sweet roll pastry cake. Fruitcake gummi bears tart I love dessert macaroon cake. Gummi bears chupa chups pie cake muffin. Cookie sweet roll icing toffee soufflé. Bear claw I love I love.</p>
             </div>
         </div>
     </section>
