--- a/about-me.html
+++ b/about-me.html
@@ -139,7 +139,7 @@
         <div class="container page-menu-list footer">
             <ul>
                 <li>
-                    <a href="">Polityka prywatności</a>
+                    <a href="privacy-policy.html">Polityka prywatności</a>
                 </li>
             </ul>
             <ul class="footer-contact">
@@ -159,10 +159,11 @@
         <h5>Copyright <a href="https://fizjon.com">Fizjon (2020)</a></h5>
     </section>
     <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
+    <button class="btn-to-top" id="btn-to-top"><i class="fas fa-chevron-up"></i></button>
     <section class="cookie" id="cookie-alert">
         <div class="container">
             <div class="cookie-div">
-                <h5>Strona korzysta z plików cookies w celu realizacji usług i zgodnie z <a href="">Polityką Plików Cookies.</a></h5>
+                <h5>Strona korzysta z plików cookies w celu realizacji usług i zgodnie z <a href="privacy-policy.html">Polityką Plików Cookies.</a></h5>
                 <h5>Możesz określić warunki przechowywania lub dostępu do plików cookies w Twojej przeglądarce.</h5>
             </div>
             <button class="btn-cookie" id="btn-cookie">OK, rozumiem</button>
