adjusted privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -76,7 +76,7 @@
         <h2>Polityka prywatności i plików cookies</h2>
         <div class="container">
             <div class="policy">
-                <h3>§ Tart powder apple pie.</h3>
+                <h3>§ Tart powder apple pie</h3>
                 <p>Cupcake ipsum dolor sit amet carrot cake. Pie I love chocolate bar ice cream liquorice cake. Donut croissant icing chocolate toffee. Biscuit marshmallow tart ice cream I love bear claw. I love biscuit I love jelly-o jujubes. Cupcake liquorice I love I love tart jujubes. Caramels pie chocolate cake sugar plum. Gummies pie sugar plum wafer carrot cake cheesecake. Gingerbread liquorice cake chupa chups sweet roll jelly-o croissant I love chocolate. Gummi bears dragée jelly I love caramels topping candy canes toffee icing.</p>
                 <h3>§ Cupcake ipsum dolor</h3>
                 <p>Icing pastry sweet roll I love I love pudding chocolate candy. Halvah tart carrot cake bonbon oat cake sugar plum muffin. Sweet candy canes I love gummies cookie cheesecake dragée gingerbread. Chocolate bar I love caramels croissant tiramisu. Macaroon apple pie tootsie roll I love liquorice tootsie roll soufflé. Marzipan donut tootsie roll bear claw carrot cake. Carrot cake muffin ice cream. Topping caramels chocolate bar candy I love lollipop soufflé cheesecake ice cream. Apple pie cake marshmallow chocolate. Lemon drops cupcake chocolate cake chupa chups tiramisu jelly beans danish I love soufflé.</p>
