--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" href="./images//favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="Fizjon, Fizjoterapia, Fizjoterapeuta, Masaż, Masaż leczniczy, Kinesiotaping, Terapia Manualna, Kinezyterapia, Fizykoterapia, Leczenie Ruchem" />
